@@ -1,3 +1,10 @@
+2008-01-25  Chris Lord  <chris@openedhand.com>
+
+	* src/multitap-pad-main.c: (hide_window_idle), (hide_window),
+	(show_window), (invoke_cb), (main):
+	Add button 1 to the buttons list, delay hiding the keypad slightly so
+	that quick hide/shows won't cause flickering
+
 2008-01-24  Chris Lord  <chris@openedhand.com>
 
 	* src/multitap-pad-main.c: (change_mode), (alt_keypress_timeout),
